--- a/src/css/benefits.css
+++ b/src/css/benefits.css
@@ -29,7 +29,7 @@
   top: 50%;
   left: 50%;
   width: 100vh;
-  height: 100vw;
+  /* height: 100vw; */
   background: url('../img/backgrounds/benefits-gallery.jpg') center/cover
     no-repeat;
   transform: translate(-50%, -50%) rotate(90deg) scale(1.35);
